--- a/index.html
+++ b/index.html
@@ -1716,9 +1716,11 @@
   </ul>
 
             </div>
-								  <a href="mailto:smartpetshopper.in@gmail.com">
-   Contact Us : <span text-decoration-none text-gray-700 hover:text-blue fw-semibold cursor-pointer>smartpetshopper.in@gmail.com</span>
-  </a>
+								    <div class="col-12">
+                    <a href="mailto:smartpetshopper.in@gmail.com" class="text-gray-400 hover:text-white">
+                        Contact Us: <span class="text-pet-teal">smartpetshopper.in@gmail.com</span>
+                    </a>
+                </div>
         </div>
         <hr class="my-4 border-gray-700">
         <div class="row">
