--- a/index.html
+++ b/index.html
@@ -45,6 +45,29 @@
       }
     }
     </script>
+
+	<!-- Load Tailwind via CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Inline Tailwind config -->
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          'pet-teal': '#2dd4bf',
+          'pet-coral': '#fb7185',
+          'pet-dark': '#1f2937',
+          'pet-light': '#f9fafb',
+        },
+        fontFamily: {
+          sans: ['Poppins', 'sans-serif'],
+        },
+      }
+    }
+  }
+</script>
+
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
