--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@
                 <p class="text-gray-400">Helping pet parents find the best products at the best prices.</p>
                 <div class="mt-4">
                     <a href="#" class="text-gray-400 hover:text-white me-3" aria-label="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white me-3" aria-label="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com/smartpetshopper/" class="text-gray-400 hover:text-white me-3" aria-label="Instagram"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white me-3" aria-label="Pinterest"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white" aria-label="Twitter"><i class="fab fa-twitter" aria-hidden="true"></i></a>
                 </div>
