--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </div>
           <div class="col-lg-6 critical-css" style="animation-delay: 0.3s;">
     <div class="position-relative">
-        <img loading="lazy" src="images\misc\FI1.avif" alt="Dog sitting happily with pet accessories" class="img-fluid rounded-lg shadow-lg w-full h-auto" loading="lazy" width="800" height="600">
+        <img loading="lazy" src="images\misc\FI1.jpeg" alt="Dog sitting happily with pet accessories" class="img-fluid rounded-lg shadow-lg w-full h-auto" loading="lazy" width="800" height="600">
         <div class="position-absolute bottom-0 start-0 bg-white p-3 rounded-lg shadow-sm ms-3 mb-3" style="max-width: 220px;">
             <p class="fw-bold mb-1">Expert-picked deals & gear</p>
             <div class="text-yellow-400 mb-1">
@@ -1767,32 +1767,32 @@
         <div class="row g-2">
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI1.avif" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI1.jpeg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI2.avif" alt="Pet travel accessories" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI2.jpeg" alt="Pet travel accessories" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI3.avif" alt="Smart pet tech" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI3.jpeg" alt="Smart pet tech" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI4.avif" alt="Cat with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI4.jpeg" alt="Cat with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI5.avif" alt="Happy pet" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI5.jpeg" alt="Happy pet" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
 			              <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI1.avif" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI1.jpeg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
         </div>
