--- a/index.html
+++ b/index.html
@@ -1767,32 +1767,32 @@
         <div class="row g-2">
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI1.jpeg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI1.jpg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI2.jpeg" alt="Pet travel accessories" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI2.jpg" alt="Pet travel accessories" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI3.jpeg" alt="Smart pet tech" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI3.jpg" alt="Smart pet tech" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI4.jpeg" alt="Cat with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI4.jpg" alt="Cat with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI5.jpeg" alt="Happy pet" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI5.jpg" alt="Happy pet" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
 			              <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI1.jpeg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="images\misc\FI1.jpg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
         </div>
