--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </div>
           <div class="col-lg-6 critical-css" style="animation-delay: 0.3s;">
     <div class="position-relative">
-        <img loading="lazy" src="images\misc\FI1.jpeg" alt="Dog sitting happily with pet accessories" class="img-fluid rounded-lg shadow-lg w-full h-auto" loading="lazy" width="800" height="600">
+        <img loading="lazy" src="Images\misc\FI1.jpeg" alt="Dog sitting happily with pet accessories" class="img-fluid rounded-lg shadow-lg w-full h-auto" loading="lazy" width="800" height="600">
         <div class="position-absolute bottom-0 start-0 bg-white p-3 rounded-lg shadow-sm ms-3 mb-3" style="max-width: 220px;">
             <p class="fw-bold mb-1">Expert-picked deals & gear</p>
             <div class="text-yellow-400 mb-1">
@@ -1446,7 +1446,7 @@
                 <div class="col-md-4">
                     <div class="bg-white rounded-lg overflow-hidden shadow-sm h-full flex flex-col border-2 border-pet-coral">
                         <div class="relative">
-                            <img loading="lazy" src="images\deals\D1.jpg" alt="Pets Empire Dog Bowl" class="w-full h-48 object-contain p-4" loading="lazy">
+                            <img loading="lazy" src="Images\deals\D1.jpg" alt="Pets Empire Dog Bowl" class="w-full h-48 object-contain p-4" loading="lazy">
                             <div class="absolute top-2 right-2 bg-pet-coral text-white text-xs px-2 py-1 rounded-full">79% OFF</div>
                         </div>
                         <div class="p-4 flex-grow">
@@ -1474,7 +1474,7 @@
                 <div class="col-md-4">
                     <div class="bg-white rounded-lg overflow-hidden shadow-sm h-full flex flex-col border-2 border-pet-coral">
                         <div class="relative">
-                            <img loading="lazy" src="images\deals\D2.jpg" alt="The Pets Company Dog Poop Bags" class="w-full h-48 object-contain p-4" loading="lazy">
+                            <img loading="lazy" src="Images\deals\D2.jpg" alt="The Pets Company Dog Poop Bags" class="w-full h-48 object-contain p-4" loading="lazy">
                             <div class="absolute top-2 right-2 bg-pet-coral text-white text-xs px-2 py-1 rounded-full">8% OFF</div>
                         </div>
                         <div class="p-4 flex-grow">
@@ -1501,7 +1501,7 @@
             <div class="col-md-4">
                 <div class="bg-white rounded-lg overflow-hidden shadow-sm h-full flex flex-col border-2 border-pet-coral">
                     <div class="relative">
-                        <img loading="lazy" src="images\deals\D3.jpg" alt="Astronaut Pet Carrier Bag for Travel" class="w-full h-48 object-contain p-4" loading="lazy">
+                        <img loading="lazy" src="Images\deals\D3.jpg" alt="Astronaut Pet Carrier Bag for Travel" class="w-full h-48 object-contain p-4" loading="lazy">
                         <div class="absolute top-2 right-2 bg-pet-coral text-white text-xs px-2 py-1 rounded-full">33% OFF</div>
                     </div>
                     <div class="p-4 flex-grow">
@@ -1767,32 +1767,32 @@
         <div class="row g-2">
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI1.jpg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="Images\misc\FI1.jpg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI2.jpg" alt="Pet travel accessories" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="Images\misc\FI2.jpg" alt="Pet travel accessories" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI3.jpg" alt="Smart pet tech" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="Images\misc\FI3.jpg" alt="Smart pet tech" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI4.jpg" alt="Cat with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="Images\misc\FI4.jpg" alt="Cat with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
             <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI5.jpg" alt="Happy pet" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="Images\misc\FI5.jpg" alt="Happy pet" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
 			              <div class="col-4 col-md-2">
                 <a href="#" class="block overflow-hidden rounded-lg instagram-post">
-                    <img loading="lazy" src="images\misc\FI1.jpg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
+                    <img loading="lazy" src="Images\misc\FI1.jpg" alt="Happy dog with our recommended products" class="w-full h-32 object-cover transition-transform duration-500 hover:scale-110" loading="lazy">
                 </a>
             </div>
         </div>
