--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 </div>
           <div class="col-lg-6 critical-css" style="animation-delay: 0.3s;">
     <div class="position-relative">
-        <img loading="lazy" src="Images\misc\FI1.jpeg" alt="Dog sitting happily with pet accessories" class="img-fluid rounded-lg shadow-lg w-full h-auto" loading="lazy" width="800" height="600">
+        <img loading="lazy" src="Images\misc\FI1.jpg" alt="Dog sitting happily with pet accessories" class="img-fluid rounded-lg shadow-lg w-full h-auto" loading="lazy" width="800" height="600">
         <div class="position-absolute bottom-0 start-0 bg-white p-3 rounded-lg shadow-sm ms-3 mb-3" style="max-width: 220px;">
             <p class="fw-bold mb-1">Expert-picked deals & gear</p>
             <div class="text-yellow-400 mb-1">
